Cannot select similar face regions #44258

Closed
opened 2015-04-04 11:35:49 +02:00 by Leon Cheung · 8 comments
Member

System Information
Win8.1 64bit | GTX680

Blender Version
Broken: 2.74.3 519e20f
Worked: 2.74.2 131912d

Short description of error
Select similar face regions doesn't work in recent build.

Exact steps for others to reproduce the error
Open example file, Shift G > Face Regions.

select_similar_face_region.blend

**System Information** Win8.1 64bit | GTX680 **Blender Version** Broken: 2.74.3 519e20f Worked: 2.74.2 131912d **Short description of error** Select similar face regions doesn't work in recent build. **Exact steps for others to reproduce the error** Open example file, Shift G > Face Regions. [select_similar_face_region.blend](https://archive.blender.org/developer/F158103/select_similar_face_region.blend)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @ZhangYu

Added subscriber: @ZhangYu

Added subscriber: @ideasman42

Added subscriber: @ideasman42

This is very strange, I was able to redo the bug, but it only happens with some builds it seems.

Tested on ArchLinux:

  • Development build - works
  • Blender.org build - works
  • ArchLinux package - sometimes fails (gives error no matches found).

Needs further investigation.

This is very strange, I was able to redo the bug, but it only happens with some builds it seems. Tested on ArchLinux: - Development build - works - Blender.org build - works - ArchLinux package - sometimes fails (gives error no matches found). Needs further investigation.

This issue was referenced by 20a780e3e8

This issue was referenced by 20a780e3e88948a0f0a4e552359c8ff915a369a8

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 20a780e3e8.

Closed by commit 20a780e3e8.

note, the bug was simple - but somehow it was only exposed in optimized builds.

note, the bug was simple - but somehow it was only exposed in optimized builds.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44258
No description provided.