Fix T44258: Can't select similar regions